# AI-mini-project

./: app.py  gdp-per-capita-in-international-and-market-dollars.csv  pyproject.toml
