[tool.poetry]
name = "ai-mini-project"
version = "0.1.0"
description = ""
authors = ["Dimitrios Gkiokas <dimitris.giokas1@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_mini_project"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
matplotlib = "^3.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
